added bootstrap rows

--- a/style.css
+++ b/style.css
@@ -63,6 +63,8 @@ textarea {
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
+  display: flex;
+  align-items: center;
 }
 
 .saveBtn i:hover {
